tests/files/invalid/semantic/components/a.yumly
include { ../circular_include.yumly }